Added no offline mod for psql

--- a/.env.exmpl
+++ b/.env.exmpl
@@ -1,10 +1,7 @@
-USDC_CONTRACT_ADDRESS="0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48"
-
-PRIORITATED_BLOCK=number
-
-POSTGRES_USER=your_user
-POSTGRES_PASSWORD=your_secret_password
-POSTGRES_DB=my_indexer
-
-HTTP_INFURA_URL="httpsDEMO_API_KEY_DOES_NOT_EXIST"
-DATABASE_URL="postgres://{your_user}:{your_secret_password}@localhost/my_indexer"
+USDC_CONTRACT_ADDRESS="{0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48}"
+PRIORITATED_BLOCK="{number}"
+POSTGRES_USER="{your_user}"
+POSTGRES_PASSWORD="{your_secret_password}"
+POSTGRES_DB="{my_indexer}"
+HTTP_INFURA_URL="{API_KEY}"
+DATABASE_URL="postgres://{POSTGRES_USER}:{POSTGRES_PASSWORD}@localhost/{POSTGRES_DB}"
