--- a/indexing-serv/dockerfile
+++ b/indexing-serv/dockerfile
@@ -1,42 +1,28 @@
-
-FROM rust:1-slim-bookworm AS builder
-
-
-RUN apt-get update && apt-get install -y libpq-dev pkg-config libssl-dev build-essential
+FROM rust:1.90 as builder
 
 WORKDIR /app
+COPY . .
 
-
-COPY Cargo.toml Cargo.lock ./
-
-RUN mkdir -p src/server src/models
-RUN echo "" > src/server/mod.rs
-RUN echo "" > src/models/mod.rs
-RUN echo "" > src/config.rs
-RUN echo "fn main() {}" > src/main.rs
-RUN echo "pub mod config; pub mod models; pub mod server;" > src/lib.rs
-RUN cargo build --release
-RUN rm -f target/release/deps/indexing_svc*
-
-
-COPY src ./src
-COPY migrations ./migrations
-COPY .sqlx ./.sqlx 
-
-ENV SQLX_OFFLINE=true
-RUN cargo build --release
-
+RUN cargo build --release --bin app
 
 FROM debian:bookworm-slim
 
-
-RUN apt-get update && apt-get install -y ca-certificates libpq5 \
+RUN apt-get update && apt-get install -y \
+    ca-certificates \
+    openssl \
+    libssl3 \
     && rm -rf /var/lib/apt/lists/*
+
 WORKDIR /app
 
-COPY --from=builder /app/target/release/indexing-svc .
-COPY migrations ./migrations
+RUN useradd -m -u 1000 appuser && \
+    mkdir -p /app/data && \
+    chown -R appuser:appuser /app
+
+USER appuser
+
+COPY --from=builder --chown=appuser:appuser /app/target/release/app /app/
 
 EXPOSE 3000
 
-CMD ["./indexing-svc"]
+CMD ["/app/app"]
